--- a/log4j2.properties
+++ b/log4j2.properties
@@ -3,19 +3,32 @@
     status = error
     name = PropertiesConfig
      
-    property.filename = target/rolling/rollingtest.log
+    property.filename = c:/logs/DynDNSC.log
      
     filters = threshold
-     
+    
     filter.threshold.type = ThresholdFilter
     filter.threshold.level = trace
      
-    appenders = console
+    appenders = console, rolling
      
     appender.console.type = Console
     appender.console.name = STDOUT
     appender.console.layout.type = PatternLayout
-    appender.console.layout.pattern = %m%n
+    appender.console.layout.pattern = %d %p %C{1.} [%t] %m%n
+	      
+	appender.rolling.type = RollingFile
+	appender.rolling.name = RollingFile
+	appender.rolling.fileName = ${filename}
+	appender.rolling.filePattern = c:/logs/DynDNSC-%i.log
+	appender.rolling.layout.type = PatternLayout
+	appender.rolling.layout.pattern = %d %p %C{1.} [%t] %m%n
+	appender.rolling.policies.type = Policies
+	appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
+	appender.rolling.policies.size.size=10MB
+	appender.rolling.policies.startup.type = OnStartupTriggeringPolicy
+	appender.rolling.strategy.type = DefaultRolloverStrategy
+	appender.rolling.strategy.max = 5
           
     loggers = console
      
@@ -24,8 +37,9 @@
 	logger.console.additivity = false
 	logger.console.appenderRefs = stdout
 	logger.console.appenderRef.stdout.ref = STDOUT
-     
+
     rootLogger.level = trace
-    rootLogger.appenderRefs = stdout
+    rootLogger.appenderRefs = stdout, rolling
     rootLogger.appenderRef.stdout.ref = STDOUT
+    rootLogger.appenderRef.rolling.ref = RollingFile
               
