adding build.gradle file updated log4j2 properties so that filepath is not repeated fixed usage() typo in DynDNSClient main()

--- a/log4j2.properties
+++ b/log4j2.properties
@@ -2,8 +2,9 @@
 
     status = error
     name = PropertiesConfig
-     
-    property.filename = c:/logs/DynDNSC.log
+    
+    property.filepath = /var/log/DynDNSC
+    property.filename = ${filepath}/DynDNSC.log    
      
     filters = threshold
     
@@ -20,7 +21,7 @@
 	appender.rolling.type = RollingFile
 	appender.rolling.name = RollingFile
 	appender.rolling.fileName = ${filename}
-	appender.rolling.filePattern = c:/logs/DynDNSC-%i.log
+	appender.rolling.filePattern = ${filepath}/DynDNSC-%i.log
 	appender.rolling.layout.type = PatternLayout
 	appender.rolling.layout.pattern = %d %p %C{1.} [%t] %m%n
 	appender.rolling.policies.type = Policies
