Create DNS record if not found, support added for list of records to update, cleaned up logs.

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -39,7 +39,7 @@
 	logger.console.appenderRefs = stdout
 	logger.console.appenderRef.stdout.ref = STDOUT
 
-    rootLogger.level = trace
+    rootLogger.level = debug
     rootLogger.appenderRefs = stdout, rolling
     rootLogger.appenderRef.stdout.ref = STDOUT
     rootLogger.appenderRef.rolling.ref = RollingFile
