fixed command line opts

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -16,7 +16,7 @@
     appender.console.type = Console
     appender.console.name = STDOUT
     appender.console.layout.type = PatternLayout
-    appender.console.layout.pattern = %d %p %C{1.} [%t] %m%n
+    appender.console.layout.pattern = %d %p %C{1.} %L %m%n
 	      
 	appender.rolling.type = RollingFile
 	appender.rolling.name = RollingFile
